this-e.function-differences

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Animacja</h1>
-
-    <button class="animate">Animate</button>
-    
+    <button id="click-button">Click!</button>
     <!-- jQuery is first! -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- custom JS -->
